--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,9 +80,8 @@ jobs:
 
       - name: Test package
         run: >-
-          python -m pytest src tests/unit tests/functional -ra --cov
-          --cov-report=xml --cov-report=term --durations=20 --arraydiff -m"not
-          slow"
+          python -m pytest src tests/unit -ra --cov --cov-report=xml
+          --cov-report=term --durations=20 --arraydiff -m"not slow"
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v4.0.1
